--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/*
-.node_modules/*
-.upload/*
-.vendor/*
-.package-lock.json
-.test.php
+node_modules/*
+upload/*
+vendor/*
+package-lock.json
+test.php
